--- a/views/index.erb
+++ b/views/index.erb
@@ -1,13 +1,17 @@
 <div class="wrapper">
   <form action="/" method="post">
-    <textarea rows="10" cols="50" name="code">
-ja 1 > 0
-  izdrukāt_virkni "Sveika pasaule!"
+    <textarea name="code" style="font-size: 14px; width: 600px; height: 400px;">
+vērtība = 10
+
+ja vērtība > 100 tad
+  izdrukāt_virkni "viss kārtībā"
+bet_ja vērtība > 0 tad
+  izdrukāt_virkni "gandrīz kārtībā"
 citādi
-  izdrukāt_virkni "Kaut kas ir sabojājies"
+  izdrukāt_virkni "nav labi"
 beigas
     </textarea>
     <br>
-    <input type="submit">
+    <input type="submit" value='Palaist'>
   </form>
 </div>
