--- a/views/layout.erb
+++ b/views/layout.erb
@@ -3,8 +3,18 @@
 <head>
   <meta charset="utf-8">
   <title>Dzintars</title>
+  <link rel="stylesheet" href="/css/normalize.css">
+  <link rel="stylesheet" href="/css/application.css">
+  <link rel="stylesheet" href="/css/codemirror.css">
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+  <script src="/js/xregexp/xregexp.js"></script>
+  <script src="/js/xregexp/unicode-base.js"></script>
+  <script src="/js/codemirror.js"></script>
+  <script src="/js/codemirror/dzintars.js"></script>
+  <script src="/js/codemirror/active-line.js"></script>
 </head>
   <body>
     <%= yield %>
+    <script src="/js/application.js"></script>
   </body>
 </html>
